--- a/index.html
+++ b/index.html
@@ -403,7 +403,101 @@
             <button class="modal-close-button">&times;</button>
             <h3 class="text-2xl font-bold text-[#003642] mb-4">भारतीय सेना भर्ती</h3>
             <div class="modal-list">
-                <a href="army-recruitment.html">Army Recruitment</a>
+               <!-- A -->
+<a href="acc.html">ACC – Army Cadet College</a><br>
+<a href="aec.html">AEC – Army Education Corps</a><br>
+<a href="amc.html">AMC – Army Medical Corps</a><br>
+<a href="aps.html">APS – Army Postal Service</a><br>
+<a href="asc.html">ASC – Army Service Corps</a><br>
+<a href="army-clerk.html">Army Clerk / Store Keeper (SKT)</a><br>
+<a href="army-catering.html">Army Catering (JCO)</a><br>
+<a href="army-civil-driver.html">Army Civil Motor Driver</a><br>
+
+<!-- B -->
+<a href="barber.html">Barber (Tradesman)</a><br>
+
+<!-- C -->
+<a href="cds.html">CDS – Combined Defence Services (UPSC)</a><br>
+<a href="carpenter.html">Carpenter (Tradesman)</a><br>
+<a href="civilian-clerk.html">Civilian Clerk (LDC/UDC)</a><br>
+<a href="cook.html">Cook (Tradesman)</a><br>
+
+<!-- D -->
+<a href="dresser.html">Dresser (Tradesman)</a><br>
+<a href="draughtsman.html">Draughtsman (MES)</a><br>
+<a href="direct-entry.html">Direct Entry (Graduate/Technical)</a><br>
+
+<!-- E -->
+<a href="eme.html">EME – Corps of Electronics & Mechanical Engineers</a><br>
+<a href="education-jco.html">Education JCO (AEC)</a><br>
+<a href="equipment-repairer.html">Equipment Repairer (Tradesman)</a><br>
+<a href="engineers.html">Engineers – Military Engineering Services</a><br>
+
+<!-- F -->
+<a href="fireman.html">Fireman (Civilian Defence)</a><br>
+
+<!-- G -->
+<a href="gd.html">GD – Soldier General Duty</a><br>
+<a href="gardener.html">Gardener / Mali (Tradesman)</a><br>
+
+<!-- H -->
+<a href="housekeeper.html">Housekeeper (Tradesman)</a><br>
+
+<!-- J -->
+<a href="jag.html">JAG – Judge Advocate General (Law Officers)</a><br>
+<a href="jco-rt.html">JCO Religious Teacher</a><br>
+<a href="jco-catering.html">JCO Catering</a><br>
+
+<!-- L -->
+<a href="lab-assistant.html">Laboratory Assistant</a><br>
+<a href="ldc.html">Lower Division Clerk (LDC)</a><br>
+
+<!-- M -->
+<a href="mess-keeper.html">Mess Keeper (Tradesman)</a><br>
+<a href="military-police.html">Military Police (Constable)</a><br>
+<a href="mechanic.html">Mechanic / Technician (EME)</a><br>
+<a href="medical-officer.html">Medical Officer (Doctor, AMC)</a><br>
+
+<!-- N -->
+<a href="nda.html">NDA – National Defence Academy</a><br>
+<a href="na.html">Nursing Assistant (AMC)</a><br>
+<a href="na-vet.html">Nursing Assistant Veterinary (RVC)</a><br>
+<a href="naib-subedar.html">Naib Subedar (JCO)</a><br>
+
+<!-- P -->
+<a href="pioneer.html">Pioneer Corps</a><br>
+<a href="painter.html">Painter (Tradesman)</a><br>
+<a href="postal-clerk.html">Postal Clerk (APS)</a><br>
+
+<!-- R -->
+<a href="rvc.html">RVC – Remount Veterinary Corps</a><br>
+<a href="religious-teacher.html">Religious Teacher (JCO)</a><br>
+
+<!-- S -->
+<a href="signal-corps.html">Signal Corps – Communication</a><br>
+<a href="skilled-tradesman.html">Skilled Tradesman</a><br>
+<a href="store-keeper.html">Store Keeper</a><br>
+<a href="stenographer.html">Stenographer</a><br>
+<a href="safaiwala.html">Safaiwala (Tradesman)</a><br>
+<a href="syce.html">Syce (Horse Attendant)</a><br>
+
+<!-- T -->
+<a href="tgc.html">TGC – Technical Graduate Course</a><br>
+<a href="tes.html">TES – Technical Entry Scheme (10+2)</a><br>
+<a href="tailor.html">Tailor (Tradesman)</a><br>
+<a href="technician.html">Technician (Signals/EME)</a><br>
+<a href="tradesman.html">Tradesman (8th/10th Pass)</a><br>
+
+<!-- U -->
+<a href="udc.html">Upper Division Clerk (UDC)</a><br>
+
+<!-- W -->
+<a href="washerman.html">Washerman (Tradesman)</a><br>
+<a href="women-mp.html">Women Military Police</a><br>
+
+<!-- Z -->
+<a href="zoo-vet-assistant.html">Zoo Veterinary Assistant (RVC)</a><br>
+
             </div>
         </div>
     </div>
