--- a/index.html
+++ b/index.html
@@ -532,14 +532,20 @@
             <button class="modal-close-button" title="Close">&times;</button>
             <h3 class="text-3xl font-bold text-[#00458a] mb-4">UPSC परीक्षाएँ</h3>
             <div class="modal-list">
-                <a href="ese.html">Engineering Services Exam (ESE)</a>
-                <a href="cse.html">Civil Services Exam (CSE)</a>
+                <a href="upsc-cse-is-ias-ips-ifs.html">Civil Services Exam (CSE)</a>
+                <a href="upsc-ese-ies-engineering-services-exam.html">Engineering Services Exam (ESE)</a>
                 <a href="ifos.html">Indian Forest Service (IFoS)</a>
                 <a href="cds.html">Combined Defence Services (CDS)</a>
                 <a href="nda-na.html">National Defence Academy & Naval Academy (NDA/NA)</a>
                 <a href="cms.html">Combined Medical Services (CMS)</a>
                 <a href="ies-iss.html">Indian Economic Service/Indian Statistical Service (IES/ISS)</a>
                 <a href="capf.html">CAPF (Assistant Commandant)</a>
+                <a href="geo-scientist.html">Combined Geo-Scientist Exam</a>
+                <a href="epfo.html">EPFO EO/AO Exam</a>
+                <a href="cisf-ldce.html">CISF AC (EXE) Limited Dept. Competitive Exam (LDCE)</a>
+                <a href="so-steno.html">SO/Steno (Grade B/Grade I) LDCE</a>
+                <a href="cbi-ldce.html">CBI (DSP) Limited Dept. Competitive Exam</a>
+                <a href="scra.html">Special Class Railway Apprentice (SCRA) Exam</a>
             </div>
         </div>
     </div>
