--- a/upsc-cse-is-ias-ips-ifs.html
+++ b/upsc-cse-is-ias-ips-ifs.html
@@ -657,7 +657,7 @@
         </main>
 
         <footer class="text-center mt-16 border-t-2 pt-8 border-[#004AAD]/20">
-            <p class="text-[#242424] text-lg font-medium">&copy; 2025 UPSC CSE । आपकी राष्ट्र सेवा की यात्रा के लिए हार्दिक शुभकामनाएँ।</p>
+            <p class="text-[#242424] text-lg font-medium">&copy; 2025 Crapd.in । आपकी राष्ट्र सेवा की यात्रा के लिए हार्दिक शुभकामनाएँ।</p>
         </footer>
 
     </div>
