--- a/upsc-ese-ies-engineering-services-exam.html
+++ b/upsc-ese-ies-engineering-services-exam.html
@@ -268,8 +268,7 @@
         </main>
 
         <footer class="text-center mt-16 border-t-2 pt-8 border-gray-200">
-            <p class="text-gray-700 text-lg font-medium">&copy; 2025 ESE/IES गाइड। आपकी सफलता के लिए शुभकामनाएँ।</p>
-            <p class="text-gray-600 text-sm mt-2">द्वारा संचालित: <a href="https://crapd.in" target="_blank" class="text-blue-600 hover:underline">crapd.in</a></p>
+            <p class="text-gray-700 text-lg font-medium">&copy; 2025 Crapd.in - ESE/IES गाइड। आपकी सफलता के लिए शुभकामनाएँ।</p>
         </footer>
 
     </div>
