--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
             <div class="modal-list">
                 <a href="upsc-cse-is-ias-ips-ifs.html">Civil Services Exam (CSE)</a>
                 <a href="upsc-ese-ies-engineering-services-exam.html">Engineering Services Exam (ESE)</a>
-                <a href="ifos.html">Indian Forest Service (IFoS)</a>
+                <a href="upsc-ifos-indian-forest-services.html">Indian Forest Service (IFoS)</a>
                 <a href="cds.html">Combined Defence Services (CDS)</a>
                 <a href="nda-na.html">National Defence Academy & Naval Academy (NDA/NA)</a>
                 <a href="cms.html">Combined Medical Services (CMS)</a>
