--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         </main>
         
         <footer class="text-center mt-16 border-t-2 pt-8 border-gray-300">
-            <p class="text-gray-600 text-lg font-medium">&copy; 2025 सरकारी परीक्षा गाइड। आपकी सफलता के लिए हार्दिक शुभकामनाएँ।</p>
+            <p class="text-gray-600 text-lg font-medium">&copy;crapd.in 2025 सरकारी परीक्षा गाइड। आपकी सफलता के लिए हार्दिक शुभकामनाएँ।</p>
         </footer>
 
     </div>
