--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                 <a href="upsc-ese-ies-engineering-services-exam.html">Engineering Services Exam (ESE)</a>
                 <a href="upsc-ifos-indian-forest-services.html">Indian Forest Service (IFoS)</a>
                 <a href="ups-cds-combined-defence-dervices.html">Combined Defence Services (CDS)</a>
-                <a href="nda-na.html">National Defence Academy & Naval Academy (NDA/NA)</a>
+                <a href="upsc-nda-na-services.html">National Defence Academy & Naval Academy (NDA/NA)</a>
                 <a href="cms.html">Combined Medical Services (CMS)</a>
                 <a href="ies-iss.html">Indian Economic Service/Indian Statistical Service (IES/ISS)</a>
                 <a href="capf.html">CAPF (Assistant Commandant)</a>
