--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
                 <a href="upsc-ifos-indian-forest-services.html">Indian Forest Service (IFoS)</a>
                 <a href="ups-cds-combined-defence-dervices.html">Combined Defence Services (CDS)</a>
                 <a href="upsc-nda-na-services.html">National Defence Academy & Naval Academy (NDA/NA)</a>
-                <a href="cms.html">Combined Medical Services (CMS)</a>
-                <a href="ies-iss.html">Indian Economic Service/Indian Statistical Service (IES/ISS)</a>
+                <a href="upsc-cms-services.html">Combined Medical Services (CMS)</a>
+                <a href="upsc-ies-iss-services.html">Indian Economic Service/Indian Statistical Service (IES/ISS)</a>
                 <a href="capf.html">CAPF (Assistant Commandant)</a>
                 <a href="geo-scientist.html">Combined Geo-Scientist Exam</a>
                 <a href="epfo.html">EPFO EO/AO Exam</a>
@@ -556,12 +556,19 @@
             <button class="modal-close-button" title="Close">&times;</button>
             <h3 class="text-3xl font-bold text-[#2a7337] mb-4">SSC परीक्षाएँ</h3>
             <div class="modal-list">
-                <a href="ssc-cgl.html">Combined Graduate Level (CGL)</a>
-                <a href="ssc-chsl.html">Combined Higher Secondary Level (CHSL)</a>
-                <a href="ssc-mts.html">Multi Tasking Staff (MTS)</a>
-                <a href="ssc-je.html">Junior Engineer (JE)</a>
-                <a href="ssc-stenographer.html">Stenographer (C & D)</a>
-                <a href="ssc-cpo.html">CPO (Sub Inspector)</a>
+               <a href="ssc-cgl.html">SSC Combined Graduate Level (CGL) Examination</a>
+               <a href="ssc-chsl.html">SSC Combined Higher Secondary Level (CHSL) Examination</a>
+               <a href="ssc-mts.html">SSC Multi-Tasking Staff (MTS) Examination</a>
+               <a href="ssc-gd.html">SSC General Duty (GD) Constable Examination</a>
+               <a href="ssc-je.html">SSC Junior Engineer (JE) Examination</a>
+               <a href="ssc-jht.html">SSC Junior Hindi Translator (JHT) Examination</a>
+               <a href="ssc-steno.html">SSC Stenographer (Grade C & D) Examination</a>
+               <a href="ssc-cpo.html">SSC Central Police Organisation (CPO) / Sub-Inspector (SI) Examination</a>
+               <a href="ssc-selection-post.html">SSC Selection Post Examination</a>
+               <a href="ssc-constable.html">SSC Constable (Executive) Delhi Police Examination</a>
+               <a href="ssc-scientific-assistant.html">SSC Scientific Assistant in IMD Examination</a>
+               <a href="ssc-constable-tradesman.html">SSC Constable (Tradesman) Examination</a>
+               <a href="ssc-phase.html">SSC Phase-wise/Other Recruitment Exams</a>
             </div>
         </div>
     </div>
