--- a/index.html
+++ b/index.html
@@ -539,13 +539,13 @@
                 <a href="upsc-nda-na-services.html">National Defence Academy & Naval Academy (NDA/NA)</a>
                 <a href="upsc-cms-services.html">Combined Medical Services (CMS)</a>
                 <a href="upsc-ies-iss-services.html">Indian Economic Service/Indian Statistical Service (IES/ISS)</a>
-                <a href="capf.html">CAPF (Assistant Commandant)</a>
-                <a href="geo-scientist.html">Combined Geo-Scientist Exam</a>
-                <a href="epfo.html">EPFO EO/AO Exam</a>
-                <a href="cisf-ldce.html">CISF AC (EXE) Limited Dept. Competitive Exam (LDCE)</a>
-                <a href="so-steno.html">SO/Steno (Grade B/Grade I) LDCE</a>
-                <a href="cbi-ldce.html">CBI (DSP) Limited Dept. Competitive Exam</a>
-                <a href="scra.html">Special Class Railway Apprentice (SCRA) Exam</a>
+                <a href="upsc-capf-services.html">CAPF (Assistant Commandant)</a>
+                <a href="upsc-cgs-services.html">Combined Geo-Scientist Exam</a>
+                <a href="upsc-epfo-eo-oa-services.html">EPFO EO/AO Exam</a>
+                <a href="cisf-acexe-ldce-service.html">CISF AC (EXE) Limited Dept. Competitive Exam (LDCE)</a>
+                <a href="so-steno-grade-b-grade-i-ldce-services.html">SO/Steno (Grade B/Grade I) LDCE</a>
+                <a href="cbi-dsp-limited-dept-service.html">CBI (DSP) Limited Dept. Competitive Exam</a>
+                <a href="special-class-railway-apprentice-scra-services.html">Special Class Railway Apprentice (SCRA) Exam</a>
             </div>
         </div>
     </div>
