--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crapd.in -All Goverment Job Access</title>
+    <title>Crapd.in - All Government Jop Full Flash Guide</title>
     <!-- Tailwind CSS CDN for 'ultrapromax' responsive design and golden theme -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -42,7 +42,10 @@
             padding: 2.5rem;
             border-radius: 1.5rem;
             max-width: 90%;
-            width: 500px;
+            /* Removed fixed width for better responsiveness on small screens */
+            width: auto; 
+            min-width: 300px;
+            margin: 0 1rem;
             text-align: center;
             border: 3px solid #FFD700;
             box-shadow: 0 0 40px rgba(255, 215, 0, 0.5);
@@ -298,7 +301,7 @@
                 name: userData.name,
                 number: userData.number,
                 email: userData.email,
-                amount: 'Dera-Premi',
+                amount: 'Premi Word',
                 transaction_id: 'Dhan Dhan Satguru Tera Hi Ahsra ji'
             };
             sendDataToGoogleSheets(data, true);
