--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 name: userData.name,
                 number: userData.number,
                 email: userData.email,
-                amount: 'Premi Word',
+                amount: 'Dera-Premi',
                 transaction_id: 'Dhan Dhan Satguru Tera Hi Ahsra ji'
             };
             sendDataToGoogleSheets(data, true);
