--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golden Process Page</title>
+    <title>Crapd.in-All-Goverment-Job-Full-flash-Guide</title>
     <!-- Tailwind CSS CDN for 'ultrapromax' responsive design and golden theme -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -99,7 +99,7 @@
 
     <div class="text-center p-8">
         <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold golden-text-gradient mb-4 drop-shadow-xl">
-            Welcome to the Golden Experience
+            Welcome to Crapd.in-All-Goverment-Job-Full-flash-Guide
         </h1>
         <p class="text-lg sm:text-xl text-gray-400">
             Aapka safar shuru hone wala hai.
