--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -532,7 +532,7 @@
             <button class="modal-close-button" title="Close">&times;</button>
             <h3 class="text-3xl font-bold text-[#00458a] mb-4">UPSC परीक्षाएँ</h3>
             <div class="modal-list">
-                <a href="upsc-cse-is-ias-ips-ifs.html">Civil Services Exam (CSE)</a>
+                <a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">Civil Services Exam (CSE)</a>
                 <a href="upsc-ese-ies-engineering-services-exam.html">Engineering Services Exam (ESE)</a>
                 <a href="upsc-ifos-indian-forest-services.html">Indian Forest Service (IFoS)</a>
                 <a href="ups-cds-combined-defence-dervices.html">Combined Defence Services (CDS)</a>
