--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -1146,7 +1146,7 @@
             'ifos_forest': {
                 icon: '🌳',
                 name: 'भारतीय वन सेवा (IFOS)',
-                description: 'ये अधिकारी पर्यावरण, वन और वन्यजीवों के संरक्षण, प्रबंधन और संवर्धन के लिए जिम्मेदार होते हैं। ये राष्ट्रीय उद्यानों, वन्यजीव अभयारण्यों और वन क्षेत्रों के प्रशासन का कार्यभार संभालते हैं। इनका कार्य पारिस्थितिक संतुलन बनाए रखने और वन आधारित संसाधनों का स्थायी उपयोग सुनिश्चित करने पर केंद्रित होता है।\n\nउदाहरण: एक IFS अधिकारी राष्ट्रीय उद्यान में अवैध कटाई और शिकार को रोकने के लिए उपाय लागू करता है, साथ ही वन्यजीवों के आवासों की रक्षा करता है.'
+                description: 'ये अधिकारी पर्यावरण, वन और वन्यजीवों के संरक्षण, प्रबंधन और संवर्धन के लिए जिम्मेदार होते हैं। ये राष्ट्रीय उद्यानों, वन्यजीव अभयारण्यों और वन क्षेत्रों के प्रशासन का कार्यभार संभालते हैं। इनका कार्य पारिस्थितिक संतुलन बनाए रखने और वन आधारित संसाधनों का स्थायी उपयोग सुनिश्चित करने पर केंद्रित होता है।\n\nउदाहरण: एक IFoS अधिकारी राष्ट्रीय उद्यान में अवैध कटाई और शिकार को रोकने के लिए उपाय लागू करता है, साथ ही वन्यजीवों के आवासों की रक्षा करता है.'
             },
 
             'ifs': { 
