--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div class="text-center p-8">
         <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold golden-text-gradient mb-4 drop-shadow-xl">
-            Welcome to the Golden Experience
+            Welcome to Crapd.in 
         </h1>
         <p class="text-lg sm:text-xl text-gray-400">
             Aapka safar shuru hone wala hai.
