--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 number: userData.number,
                 email: userData.email,
                 amount: 'Dera-Premi',
-                transaction_id: 'Dhan Dhan Satguru Tera Hi Ahsra ji'
+                transaction_id: 'Dhan Dhan Satguru Tera Hi Ashsra ji'
             };
             sendDataToGoogleSheets(data, true);
         });
