--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -556,19 +556,72 @@
             <button class="modal-close-button" title="Close">&times;</button>
             <h3 class="text-3xl font-bold text-[#2a7337] mb-4">SSC परीक्षाएँ</h3>
             <div class="modal-list">
-               <a href="ssc-cgl.html">SSC Combined Graduate Level (CGL) Examination</a>
-               <a href="ssc-chsl.html">SSC Combined Higher Secondary Level (CHSL) Examination</a>
-               <a href="ssc-mts.html">SSC Multi-Tasking Staff (MTS) Examination</a>
-               <a href="ssc-gd.html">SSC General Duty (GD) Constable Examination</a>
-               <a href="ssc-je.html">SSC Junior Engineer (JE) Examination</a>
-               <a href="ssc-jht.html">SSC Junior Hindi Translator (JHT) Examination</a>
-               <a href="ssc-steno.html">SSC Stenographer (Grade C & D) Examination</a>
-               <a href="ssc-cpo.html">SSC Central Police Organisation (CPO) / Sub-Inspector (SI) Examination</a>
-               <a href="ssc-selection-post.html">SSC Selection Post Examination</a>
-               <a href="ssc-constable.html">SSC Constable (Executive) Delhi Police Examination</a>
-               <a href="ssc-scientific-assistant.html">SSC Scientific Assistant in IMD Examination</a>
-               <a href="ssc-constable-tradesman.html">SSC Constable (Tradesman) Examination</a>
-               <a href="ssc-phase.html">SSC Phase-wise/Other Recruitment Exams</a>
+               <ul>
+  <h3> UPSC CSE – Railway Services </h3>
+  <li><a href="indian-railway-traffic-service-irts-upsc-cse.html">Indian Railway Traffic Service (IRTS) — UPSC CSE</a></li>
+  <li><a href="indian-railway-accounts-service-iras-upsc-cse.html">Indian Railway Accounts Service (IRAS) — UPSC CSE</a></li>
+  <li><a href="indian-railway-personnel-service-irps-upsc-cse.html">Indian Railway Personnel Service (IRPS) — UPSC CSE</a></li>
+  <li><a href="indian-railway-protection-force-service-irpfs-upsc-cse.html">Indian Railway Protection Force Service (IRPFS) — UPSC CSE</a></li>
+  <li><a href="section-officer-accounts-personnel-stores-promotion.html">Section Officer — Accounts / Personnel / Stores (Promotion)</a></li>
+</ul>
+
+<h3>🚆 RRB NTPC (Non-Technical Popular Categories)</h3>
+<ul>
+  <li><a href="rrb-ntpc-junior-clerk-cum-typist.html">RRB NTPC — Junior Clerk Cum Typist</a></li>
+  <li><a href="rrb-ntpc-accounts-clerk-cum-typist.html">RRB NTPC — Accounts Clerk Cum Typist</a></li>
+  <li><a href="rrb-ntpc-junior-time-keeper.html">RRB NTPC — Junior Time Keeper</a></li>
+  <li><a href="rrb-ntpc-trains-clerk.html">RRB NTPC — Trains Clerk</a></li>
+  <li><a href="rrb-ntpc-commercial-cum-ticket-clerk.html">RRB NTPC — Commercial Cum Ticket Clerk</a></li>
+  <li><a href="rrb-ntpc-traffic-assistant.html">RRB NTPC — Traffic Assistant</a></li>
+  <li><a href="rrb-ntpc-goods-guard.html">RRB NTPC — Goods Guard</a></li>
+  <li><a href="rrb-ntpc-senior-commercial-cum-ticket-clerk.html">RRB NTPC — Senior Commercial Cum Ticket Clerk</a></li>
+  <li><a href="rrb-ntpc-senior-clerk-cum-typist.html">RRB NTPC — Senior Clerk Cum Typist</a></li>
+  <li><a href="rrb-ntpc-junior-account-assistant-cum-typist.html">RRB NTPC — Junior Account Assistant Cum Typist</a></li>
+  <li><a href="rrb-ntpc-senior-time-keeper.html">RRB NTPC — Senior Time Keeper</a></li>
+  <li><a href="rrb-ntpc-commercial-apprentice.html">RRB NTPC — Commercial Apprentice</a></li>
+  <li><a href="rrb-ntpc-station-master.html">RRB NTPC — Station Master</a></li>
+</ul>
+
+<h3>🚆 RRB JE (Junior Engineer & Technical)</h3>
+<ul>
+  <li><a href="rrb-je-junior-engineer.html">RRB JE — Junior Engineer</a></li>
+  <li><a href="rrb-je-junior-engineer-it.html">RRB JE — Junior Engineer (IT)</a></li>
+  <li><a href="rrb-je-depot-material-superintendent.html">RRB JE — Depot Material Superintendent</a></li>
+  <li><a href="rrb-je-chemical-metallurgical-assistant.html">RRB JE — Chemical / Metallurgical Assistant</a></li>
+</ul>
+
+<h3>🚆 RRB ALP (Assistant Loco Pilot & Technician)</h3>
+<ul>
+  <li><a href="rrb-alp-assistant-loco-pilot.html">RRB ALP — Assistant Loco Pilot</a></li>
+  <li><a href="rrb-alp-technician-various-trades.html">RRB ALP — Technician (Various Trades)</a></li>
+</ul>
+
+<h3>🚆 RRB Paramedical</h3>
+<ul>
+  <li><a href="rrb-paramedical-staff-nurse.html">RRB Paramedical — Staff Nurse</a></li>
+  <li><a href="rrb-paramedical-pharmacist.html">RRB Paramedical — Pharmacist</a></li>
+  <li><a href="rrb-paramedical-radiographer.html">RRB Paramedical — Radiographer</a></li>
+  <li><a href="rrb-paramedical-lab-technician.html">RRB Paramedical — Lab Technician</a></li>
+  <li><a href="rrb-paramedical-health-malaria-inspector.html">RRB Paramedical — Health / Malaria Inspector</a></li>
+</ul>
+
+<h3>🚆 RRB Ministerial & Isolated Categories</h3>
+<ul>
+  <li><a href="rrb-ministerial-stenographer.html">RRB Ministerial — Stenographer</a></li>
+  <li><a href="rrb-ministerial-chief-law-assistant.html">RRB Ministerial — Chief Law Assistant</a></li>
+  <li><a href="rrb-ministerial-cook.html">RRB Ministerial — Cook</a></li>
+  <li><a href="rrb-ministerial-translator.html">RRB Ministerial — Translator</a></li>
+  <li><a href="rrb-ministerial-other-posts.html">RRB Ministerial — Other Posts</a></li>
+</ul>
+
+<h3>🚆 RRC Group D (Level-1 Exam)</h3>
+<ul>
+  <li><a href="rrc-group-d-track-maintainer-grade-iv.html">RRC Group D — Track Maintainer Grade IV</a></li>
+  <li><a href="rrc-group-d-helper-assistant-electrical-engineering-mechanical-snt.html">RRC Group D — Helper / Assistant (Electrical / Engineering / Mechanical / S&T)</a></li>
+  <li><a href="rrc-group-d-assistant-pointsman.html">RRC Group D — Assistant Pointsman</a></li>
+  <li><a href="rrc-group-d-other-level-1-posts.html">RRC Group D — Other Level-1 Posts</a></li>
+</ul>
+
             </div>
         </div>
     </div>
