--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -567,19 +567,19 @@
 
 <h3>🚆 RRB NTPC (Non-Technical Popular Categories)</h3>
 <ul>
-  <li><a href="rrb-ntpc-junior-clerk-cum-typist.html">RRB NTPC — Junior Clerk Cum Typist</a></li>
-  <li><a href="rrb-ntpc-accounts-clerk-cum-typist.html">RRB NTPC — Accounts Clerk Cum Typist</a></li>
-  <li><a href="rrb-ntpc-junior-time-keeper.html">RRB NTPC — Junior Time Keeper</a></li>
-  <li><a href="rrb-ntpc-trains-clerk.html">RRB NTPC — Trains Clerk</a></li>
-  <li><a href="rrb-ntpc-commercial-cum-ticket-clerk.html">RRB NTPC — Commercial Cum Ticket Clerk</a></li>
-  <li><a href="rrb-ntpc-traffic-assistant.html">RRB NTPC — Traffic Assistant</a></li>
-  <li><a href="rrb-ntpc-goods-guard.html">RRB NTPC — Goods Guard</a></li>
-  <li><a href="rrb-ntpc-senior-commercial-cum-ticket-clerk.html">RRB NTPC — Senior Commercial Cum Ticket Clerk</a></li>
-  <li><a href="rrb-ntpc-senior-clerk-cum-typist.html">RRB NTPC — Senior Clerk Cum Typist</a></li>
-  <li><a href="rrb-ntpc-junior-account-assistant-cum-typist.html">RRB NTPC — Junior Account Assistant Cum Typist</a></li>
-  <li><a href="rrb-ntpc-senior-time-keeper.html">RRB NTPC — Senior Time Keeper</a></li>
-  <li><a href="rrb-ntpc-commercial-apprentice.html">RRB NTPC — Commercial Apprentice</a></li>
-  <li><a href="rrb-ntpc-station-master.html">RRB NTPC — Station Master</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Junior Clerk Cum Typist</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Accounts Clerk Cum Typist</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Junior Time Keeper</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Trains Clerk</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Commercial Cum Ticket Clerk</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Traffic Assistant</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Goods Guard</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Senior Commercial Cum Ticket Clerk</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Senior Clerk Cum Typist</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Junior Account Assistant Cum Typist</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Senior Time Keeper</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Commercial Apprentice</a></li>
+  <li><a href="rrb-ntpc-non-technical-categories-examination.html">RRB NTPC — Station Master</a></li>
 </ul>
 
 <h3>🚆 RRB JE (Junior Engineer & Technical)</h3>
