--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -582,11 +582,71 @@
             <button class="modal-close-button" title="Close">&times;</button>
             <h3 class="text-3xl font-bold text-[#c6312a] mb-4">RRB परीक्षाएँ</h3>
             <div class="modal-list">
-                <a href="rrb-group-d.html">RRB Group D</a>
-                <a href="rrb-ntpc.html">RRB NTPC</a>
-                <a href="rrb-alp-technician.html">RRB ALP/Technician</a>
-                <a href="rrb-je.html">RRB JE</a>
-                <a href="rpf-constable.html">RPF Constable/SI</a>
+                <ul>
+ <h3> UPSC CSE – Railway Services </h3>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">Indian Railway Traffic Service (IRTS) — UPSC CSE</a></li>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">Indian Railway Accounts Service (IRAS) — UPSC CSE</a></li>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">Indian Railway Personnel Service (IRPS) — UPSC CSE</a></li>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">Indian Railway Protection Force Service (IRPFS) — UPSC CSE</a></li>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">Section Officer — Accounts / Personnel / Stores (Promotion)</a></li>
+</ul>
+
+<h3>🚆 RRB NTPC (Non-Technical Popular Categories)</h3>
+<ul>
+  <li><a href="rrb-ntpc-junior-clerk-cum-typist.html">RRB NTPC — Junior Clerk Cum Typist</a></li>
+  <li><a href="rrb-ntpc-accounts-clerk-cum-typist.html">RRB NTPC — Accounts Clerk Cum Typist</a></li>
+  <li><a href="rrb-ntpc-junior-time-keeper.html">RRB NTPC — Junior Time Keeper</a></li>
+  <li><a href="rrb-ntpc-trains-clerk.html">RRB NTPC — Trains Clerk</a></li>
+  <li><a href="rrb-ntpc-commercial-cum-ticket-clerk.html">RRB NTPC — Commercial Cum Ticket Clerk</a></li>
+  <li><a href="rrb-ntpc-traffic-assistant.html">RRB NTPC — Traffic Assistant</a></li>
+  <li><a href="rrb-ntpc-goods-guard.html">RRB NTPC — Goods Guard</a></li>
+  <li><a href="rrb-ntpc-senior-commercial-cum-ticket-clerk.html">RRB NTPC — Senior Commercial Cum Ticket Clerk</a></li>
+  <li><a href="rrb-ntpc-senior-clerk-cum-typist.html">RRB NTPC — Senior Clerk Cum Typist</a></li>
+  <li><a href="rrb-ntpc-junior-account-assistant-cum-typist.html">RRB NTPC — Junior Account Assistant Cum Typist</a></li>
+  <li><a href="rrb-ntpc-senior-time-keeper.html">RRB NTPC — Senior Time Keeper</a></li>
+  <li><a href="rrb-ntpc-commercial-apprentice.html">RRB NTPC — Commercial Apprentice</a></li>
+  <li><a href="rrb-ntpc-station-master.html">RRB NTPC — Station Master</a></li>
+</ul>
+
+<h3>🚆 RRB JE (Junior Engineer & Technical)</h3>
+<ul>
+  <li><a href="rrb-je-junior-engineer.html">RRB JE — Junior Engineer</a></li>
+  <li><a href="rrb-je-junior-engineer-it.html">RRB JE — Junior Engineer (IT)</a></li>
+  <li><a href="rrb-je-depot-material-superintendent.html">RRB JE — Depot Material Superintendent</a></li>
+  <li><a href="rrb-je-chemical-metallurgical-assistant.html">RRB JE — Chemical / Metallurgical Assistant</a></li>
+</ul>
+
+<h3>🚆 RRB ALP (Assistant Loco Pilot & Technician)</h3>
+<ul>
+  <li><a href="rrb-alp-assistant-loco-pilot.html">RRB ALP — Assistant Loco Pilot</a></li>
+  <li><a href="rrb-alp-technician-various-trades.html">RRB ALP — Technician (Various Trades)</a></li>
+</ul>
+
+<h3>🚆 RRB Paramedical</h3>
+<ul>
+  <li><a href="rrb-paramedical-staff-nurse.html">RRB Paramedical — Staff Nurse</a></li>
+  <li><a href="rrb-paramedical-pharmacist.html">RRB Paramedical — Pharmacist</a></li>
+  <li><a href="rrb-paramedical-radiographer.html">RRB Paramedical — Radiographer</a></li>
+  <li><a href="rrb-paramedical-lab-technician.html">RRB Paramedical — Lab Technician</a></li>
+  <li><a href="rrb-paramedical-health-malaria-inspector.html">RRB Paramedical — Health / Malaria Inspector</a></li>
+</ul>
+
+<h3>🚆 RRB Ministerial & Isolated Categories</h3>
+<ul>
+  <li><a href="rrb-ministerial-stenographer.html">RRB Ministerial — Stenographer</a></li>
+  <li><a href="rrb-ministerial-chief-law-assistant.html">RRB Ministerial — Chief Law Assistant</a></li>
+  <li><a href="rrb-ministerial-cook.html">RRB Ministerial — Cook</a></li>
+  <li><a href="rrb-ministerial-translator.html">RRB Ministerial — Translator</a></li>
+  <li><a href="rrb-ministerial-other-posts.html">RRB Ministerial — Other Posts</a></li>
+</ul>
+
+<h3>🚆 RRC Group D (Level-1 Exam)</h3>
+<ul>
+  <li><a href="rrc-group-d-track-maintainer-grade-iv.html">RRC Group D — Track Maintainer Grade IV</a></li>
+  <li><a href="rrc-group-d-helper-assistant-electrical-engineering-mechanical-snt.html">RRC Group D — Helper / Assistant (Electrical / Engineering / Mechanical / S&T)</a></li>
+  <li><a href="rrc-group-d-assistant-pointsman.html">RRC Group D — Assistant Pointsman</a></li>
+  <li><a href="rrc-group-d-other-level-1-posts.html">RRC Group D — Other Level-1 Posts</a></li>
+</ul>
             </div>
         </div>
     </div>
