--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -610,16 +610,16 @@
 
 <h3>🚆 RRB JE (Junior Engineer & Technical)</h3>
 <ul>
-  <li><a href="rrb-je-junior-engineer.html">RRB JE — Junior Engineer</a></li>
-  <li><a href="rrb-je-junior-engineer-it.html">RRB JE — Junior Engineer (IT)</a></li>
-  <li><a href="rrb-je-depot-material-superintendent.html">RRB JE — Depot Material Superintendent</a></li>
-  <li><a href="rrb-je-chemical-metallurgical-assistant.html">RRB JE — Chemical / Metallurgical Assistant</a></li>
+  <li><a href="rrb-je-junior-engineer-and-technical-examination.html">RRB JE — Junior Engineer</a></li>
+  <li><a href="rrb-je-junior-engineer-and-technical-examination.html">RRB JE — Junior Engineer (IT)</a></li>
+  <li><a href="rrb-je-junior-engineer-and-technical-examination.html">RRB JE — Depot Material Superintendent</a></li>
+  <li><a href="rrb-je-junior-engineer-and-technical-examination.html">RRB JE — Chemical / Metallurgical Assistant</a></li>
 </ul>
 
 <h3>🚆 RRB ALP (Assistant Loco Pilot & Technician)</h3>
 <ul>
-  <li><a href="rrb-alp-assistant-loco-pilot.html">RRB ALP — Assistant Loco Pilot</a></li>
-  <li><a href="rrb-alp-technician-various-trades.html">RRB ALP — Technician (Various Trades)</a></li>
+  <li><a href="rrb-alp-assistant-loco-pilot-and-technician.html">RRB ALP — Assistant Loco Pilot</a></li>
+  <li><a href="rrb-alp-assistant-loco-pilot-and-technician.html">RRB ALP — Technician (Various Trades)</a></li>
 </ul>
 
 <h3>🚆 RRB Paramedical</h3>
