--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -633,19 +633,19 @@
 
 <h3>🚆 RRB Ministerial & Isolated Categories</h3>
 <ul>
-  <li><a href="rrb-ministerial-stenographer.html">RRB Ministerial — Stenographer</a></li>
-  <li><a href="rrb-ministerial-chief-law-assistant.html">RRB Ministerial — Chief Law Assistant</a></li>
-  <li><a href="rrb-ministerial-cook.html">RRB Ministerial — Cook</a></li>
-  <li><a href="rrb-ministerial-translator.html">RRB Ministerial — Translator</a></li>
-  <li><a href="rrb-ministerial-other-posts.html">RRB Ministerial — Other Posts</a></li>
+  <li><a href="rrb-ministerial-and-isolated-categories.html">RRB Ministerial — Stenographer</a></li>
+  <li><a href="rrb-ministerial-and-isolated-categories.html">RRB Ministerial — Chief Law Assistant</a></li>
+  <li><a href="rrb-ministerial-and-isolated-categories.html">RRB Ministerial — Cook</a></li>
+  <li><a href="rrb-ministerial-and-isolated-categories.html">RRB Ministerial — Translator</a></li>
+  <li><a href="rrb-ministerial-and-isolated-categories.html">RRB Ministerial — Other Posts</a></li>
 </ul>
 
 <h3>🚆 RRC Group D (Level-1 Exam)</h3>
 <ul>
-  <li><a href="rrc-group-d-track-maintainer-grade-iv.html">RRC Group D — Track Maintainer Grade IV</a></li>
-  <li><a href="rrc-group-d-helper-assistant-electrical-engineering-mechanical-snt.html">RRC Group D — Helper / Assistant (Electrical / Engineering / Mechanical / S&T)</a></li>
-  <li><a href="rrc-group-d-assistant-pointsman.html">RRC Group D — Assistant Pointsman</a></li>
-  <li><a href="rrc-group-d-other-level-1-posts.html">RRC Group D — Other Level-1 Posts</a></li>
+  <li><a href="rrb-group-d-level-one-exam.html">RRC Group D — Track Maintainer Grade IV</a></li>
+  <li><a href="rrb-group-d-level-one-exam.html">RRC Group D — Helper / Assistant (Electrical / Engineering / Mechanical / S&T)</a></li>
+  <li><a href="rrb-group-d-level-one-exam.html">RRC Group D — Assistant Pointsman</a></li>
+  <li><a href="rrb-group-d-level-one-exam.html">RRC Group D — Other Level-1 Posts</a></li>
 </ul>
             </div>
         </div>
