--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -657,10 +657,30 @@
             <button class="modal-close-button" title="Close">&times;</button>
             <h3 class="text-3xl font-bold text-[#006992] mb-4">IBPS परीक्षाएँ</h3>
             <div class="modal-list">
-                <a href="ibps-po.html">IBPS PO</a>
-                <a href="ibps-clerk.html">IBPS Clerk</a>
-                <a href="ibps-rrb.html">IBPS RRB</a>
-                <a href="ibps-so.html">IBPS SO</a>
+<h3>🏦 IBPS Exams (Institute of Banking Personnel Selection)</h3>
+<ul>
+  <li><a href="ibps-po-exam.html">IBPS PO (Probationary Officer) Exam</a> – Public Sector Banks me Probationary Officer ki recruitment ke liye</li>
+  <li><a href="ibps-clerk-exam.html">IBPS Clerk Exam</a> – Clerical Cadre (Clerk posts) ke liye</li>
+</ul>
+
+<h4>IBPS RRB Exams (Regional Rural Banks ke liye)</h4>
+<ul>
+  <li><a href="ibps-rrb-officer-scale-1-exam.html">IBPS RRB Officer Scale-I (Assistant Manager)</a></li>
+  <li><a href="ibps-rrb-officer-scale-2-exam.html">IBPS RRB Officer Scale-II (Manager)</a></li>
+  <li><a href="ibps-rrb-officer-scale-3-exam.html">IBPS RRB Officer Scale-III (Senior Manager)</a></li>
+  <li><a href="ibps-rrb-office-assistant-exam.html">IBPS RRB Office Assistant (Multipurpose / Clerk)</a></li>
+</ul>
+
+<h4>IBPS Specialist Officer (SO) Exam</h4>
+<ul>
+  <li><a href="ibps-so-it-officer-scale-1.html">I.T. Officer (Scale I)</a></li>
+  <li><a href="ibps-so-agricultural-field-officer-scale-1.html">Agricultural Field Officer (Scale I)</a></li>
+  <li><a href="ibps-so-rajbhasha-adhikari-scale-1.html">Rajbhasha Adhikari (Scale I)</a></li>
+  <li><a href="ibps-so-law-officer-scale-1.html">Law Officer (Scale I)</a></li>
+  <li><a href="ibps-so-hr-personnel-officer-scale-1.html">HR / Personnel Officer (Scale I)</a></li>
+  <li><a href="ibps-so-marketing-officer-scale-1.html">Marketing Officer (Scale I)</a></li>
+</ul>
+
             </div>
         </div>
     </div>
