--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -659,8 +659,8 @@
             <div class="modal-list">
 <h3>🏦 IBPS Exams (Institute of Banking Personnel Selection)</h3>
 <ul>
-  <li><a href="ibps-po-exam.html">IBPS PO (Probationary Officer) Exam</a> – Public Sector Banks me Probationary Officer ki recruitment ke liye</li>
-  <li><a href="ibps-clerk-exam.html">IBPS Clerk Exam</a> – Clerical Cadre (Clerk posts) ke liye</li>
+  <li><a href="ibps-po-probationary-officer-clerk-exam.html">IBPS PO (Probationary Officer) Exam</a> – Public Sector Banks me Probationary Officer ki recruitment ke liye</li>
+  <li><a href="ibps-po-probationary-officer-clerk-exam.html">IBPS Clerk Exam</a> – Clerical Cadre (Clerk posts) ke liye</li>
 </ul>
 
 <h4>IBPS RRB Exams (Regional Rural Banks ke liye)</h4>
