--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -542,10 +542,10 @@
                 <a href="upsc-capf-services.html">CAPF (Assistant Commandant)</a>
                 <a href="upsc-cgs-services.html">Combined Geo-Scientist Exam</a>
                 <a href="upsc-epfo-eo-oa-services.html">EPFO EO/AO Exam</a>
-                <a href="cisf-acexe-ldce-service.html">CISF AC (EXE) Limited Dept. Competitive Exam (LDCE)</a>
-                <a href="so-steno-grade-b-grade-i-ldce-services.html">SO/Steno (Grade B/Grade I) LDCE</a>
-                <a href="cbi-dsp-limited-dept-service.html">CBI (DSP) Limited Dept. Competitive Exam</a>
-                <a href="special-class-railway-apprentice-scra-services.html">Special Class Railway Apprentice (SCRA) Exam</a>
+                <a href="upsc-cisf-acexe-ldce-service.html">CISF AC (EXE) Limited Dept. Competitive Exam (LDCE)</a>
+                <a href="upsc-so-steno-grade-b-grade-i-ldce-services.html">SO/Steno (Grade B/Grade I) LDCE</a>
+                <a href="upsc-cbi-dsp-limited-dept-service.html">CBI (DSP) Limited Dept. Competitive Exam</a>
+                <a href="upsc-special-class-railway-apprentice-scra-services.html">Special Class Railway Apprentice (SCRA) Exam</a>
             </div>
         </div>
     </div>
