--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -539,8 +539,40 @@
             <button class="modal-close-button" title="Close">&times;</button>
             <h3 class="text-3xl font-bold text-[#8b0000] mb-4">RBI परीक्षाएँ</h3>
             <div class="modal-list">
-                <a href="rbi-grade-b.html">RBI Grade B</a>
-                <a href="rbi-assistant.html">RBI Assistant</a>
+                <h3>RBI Grade B Officer Exams</h3>
+                 <ul>
+                <li><a href="rbi-grade-b-general.html">RBI Grade B — General (DR)</a></li>
+               <li><a href="rbi-grade-b-depr.html">RBI Grade B — DEPR (Economics & Policy Research)</a></li>
+               <li><a href="rbi-grade-b-dsim.html">RBI Grade B — DSIM (Statistics & Information Management)</a></li>
+               </ul>
+
+              <h3>RBI Grade A Officer Exams</h3>
+              <ul>
+                <li><a href="rbi-assistant-manager-rajbhasha.html">RBI Assistant Manager — Rajbhasha</a></li>
+                <li><a href="rbi-assistant-manager-security.html">RBI Assistant Manager — Protocol & Security</a></li>
+                 </ul>
+
+                <h3>RBI Assistant Exam</h3>
+                  <ul>
+                 <li><a href="rbi-assistant.html">RBI Assistant (Clerk)</a></li>
+                    </ul>
+
+              <h3>RBI Specialist / Technical Posts</h3>
+            <ul>
+  <li><a href="rbi-legal-officer.html">RBI Specialist — Legal Officer (Grade B)</a></li>
+  <li><a href="rbi-manager-technical.html">RBI Specialist — Manager (Technical: Civil/Electrical)</a></li>
+  <li><a href="rbi-assistant-librarian.html">RBI Specialist — Assistant Librarian (Grade A)</a></li>
+  <li><a href="rbi-curator.html">RBI Specialist — Curator (Grade A)</a></li>
+  <li><a href="rbi-it-specialist.html">RBI Specialist — IT / Data / Cyber Security</a></li>
+</ul>
+
+<h3>RBI Contractual / Consultant Posts</h3>
+<ul>
+  <li><a href="rbi-consultant-it.html">RBI Consultant — IT</a></li>
+  <li><a href="rbi-consultant-fintech.html">RBI Consultant — FinTech</a></li>
+  <li><a href="rbi-consultant-risk.html">RBI Consultant — Risk Management</a></li>
+</ul>
+
             </div>
         </div>
     </div>
